# HyperFond

./: .gitignore  README.md
plonkish/: 16  19com.txt  22com.txt  23comtxt  24com.txt  25com.txt  26com.txt  28com.txt  4  8  Cargo.toml  compile.py  single.text
plonkish/bench_data/: hyperplonk-kzg-size
plonkish/benchmark/: 2_19.text  Cargo.toml
plonkish/benchmark/benches/: basefold_proof_system.rs  distributed_basefold_proof_system.rs
plonkish/benchmark/src/: BasefoldParams.rs  lib.rs
plonkish/deNetwork/: Cargo.toml
plonkish/deNetwork/src/: channel.rs  lib.rs  multi.rs  two.rs
plonkish/plonkish_backend/: Cargo.toml
plonkish/plonkish_backend/src/: accumulation.rs  backend.rs  lib.rs  pcs.rs  util.rs
plonkish/plonkish_backend/src/accumulation/protostar/: hyperplonk.rs
plonkish/plonkish_backend/src/accumulation/protostar/hyperplonk/: preprocessor.rs
plonkish/plonkish_backend/src/backend/: hyperplonk.rs
plonkish/plonkish_backend/src/backend/hyperplonk/: preprocessor.rs  prover.rs  util.rs  verifier.rs
plonkish/plonkish_backend/src/frontend/halo2/: test.rs
plonkish/plonkish_backend/src/pcs/: multilinear.rs  univariate.rs
plonkish/plonkish_backend/src/pcs/multilinear/: basefold.rs  blaze.rs  brakedown.rs  kzg.rs  zeromorph_fri.rs
plonkish/plonkish_backend/src/pcs/univariate/: fri.rs
plonkish/plonkish_backend/src/piop/: sum_check.rs
plonkish/plonkish_backend/src/piop/sum_check/: classic.rs
plonkish/plonkish_backend/src/piop/sum_check/classic/: eval.rs
plonkish/plonkish_backend/src/poly/: multilinear.rs  univariate.rs
plonkish/plonkish_backend/src/poly_iop/: errors.rs  mod.rs  prelude.rs  structs.rs
plonkish/plonkish_backend/src/poly_iop/combined_check/: gaussian_elimination.rs  mod.rs  unipoly.rs  util.rs
plonkish/plonkish_backend/src/util/: arithmetic.rs  avx_int_types.rs  binary_extension_fields.rs  blaze_transcript.rs  code.rs  hash.rs  play_field.rs
plonkish/plonkish_backend/src/util/avx_int_types/: u256.rs  u512.rs  u64.rs  u64x8.rs
plonkish/plonkish_backend/src/util/code/: raa.rs
plonkish/subroutines/: Cargo.toml
plonkish/subroutines/dTests/: common.rs  dBaseFold.rs  dCombinedCheck.rs  dLookup.rs  dMultiRationalSumcheck.rs  dPermcheck.rs  dRationalSumcheck.rs  dRationalSumcheckPIOP.rs  dSumcheck.rs  dZerocheck.rs  deDory.rs  deMkzg.rs  deNetwork.rs  lookup_bench.rs
plonkish/subroutines/dTests/data/: 4
plonkish/subroutines/src/: lib.rs
plonkish/subroutines/src/pcs/: dummy.rs  errors.rs  mod.rs  prelude.rs  structs.rs
plonkish/subroutines/src/pcs/dbasefold/: basefold.rs  dbasefold.rs  mod.rs
plonkish/subroutines/src/pcs/deMultilinear_kzg/: batching.rs  mod.rs
plonkish/subroutines/src/pcs/dory/: batching.rs  dory.rs  mod.rs
plonkish/subroutines/src/pcs/multilinear_kzg/: batching.rs
plonkish/subroutines/src/poly_iop/: errors.rs  mod.rs  prelude.rs  structs.rs  utils.rs
plonkish/subroutines/src/poly_iop/lookup/: logup_checking.rs  logup_checking_piop.rs  mod.rs  util.rs
plonkish/subroutines/src/poly_iop/lookup/instruction/: and.rs  mod.rs  or.rs  test.rs  util.rs  xor.rs
plonkish/subroutines/src/poly_iop/lookup/subtable/: mod.rs  test.rs
plonkish/subroutines/src/poly_iop/multi_rational_sumcheck/: mod.rs
plonkish/subroutines/src/poly_iop/perm_check/: grand_product_circuit.rs  mod_layered_circuit.rs  mod_piop.rs  util.rs
plonkish/subroutines/src/poly_iop/rational_sumcheck/: layered_circuit.rs  mod.rs
plonkish/subroutines/src/poly_iop/sum_check/: batched_cubic_sumcheck.rs  generic_sumcheck.rs  mod.rs  prover.rs  verifier.rs
plonkish/subroutines/src/poly_iop/zero_check/: mod.rs  verifier.rs
