[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
itertools = "0.10.5"
gnuplot = "0.0.37"
rayon =  "1.5.3"
num-traits = "0.2.19"
# plonkish_backend
plonkish_backend = { path = "../plonkish_backend", features = ["benchmark"] }
rand_chacha={version ="0.3.1", features=["serde1"]}
# halo2
halo2_proofs = { git = "https://github.com/han0110/halo2.git", branch = "feature/for-benchmark" }
halo2_gadgets = { git = "https://github.com/han0110/halo2.git", branch = "feature/for-benchmark", features = ["unstable"] }
snark-verifier = { git = "https://github.com/han0110/snark-verifier", branch = "feature/for-benchmark", default-features = false, features = ["loader_halo2", "system_halo2"] }
ff = {version = "0.13.0"}
# espresso
ark-ff = { version = "0.4.0", default-features = false }
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
espresso_subroutines = { git = "https://github.com/EspressoSystems/hyperplonk", rev = "56b1085", package = "subroutines", default-features = false, features = ["parallel"] }
espresso_hyperplonk = { git = "https://github.com/EspressoSystems/hyperplonk", rev = "56b1085", package = "hyperplonk", default-features = false, features = ["parallel"] }
ark-std = { version = "0.3.0", features = ["parallel"] }
structopt = { version = "0.3" }
deNetwork = { path = "../deNetwork" }
bincode = "1.3"

# [features]
# default = ["timer"]
# trace = ["ark-std/print-trace"]
# timer = ["plonkish_backend/timer", "halo2_proofs/print-trace", "espresso_subroutines/print-trace", "espresso_hyperplonk/print-trace"]
# print-trace = [ 
#     "espresso_hyperplonk/print-trace"
#     ] 



[[example]]
name = "basefold_proof_system"
path = "benches/basefold_proof_system.rs"
harness = false

[[example]]
name = "distributed_basefold_proof_system"
path = "benches/distributed_basefold_proof_system.rs"
harness = false

[[bin]]
name = "plotter"
